@@ -7,6 +7,7 @@
 	- Depend on http://github.com/vaeth/push/ instead of implementing
 	  a poor substitute.
 	- scripts: More compatible usage of cd/mkdir, speed up tests for -z/-n
+	- eix-functions.sh: Make eval_gettext safe
 	- Use waitpid() in a more compatible manner
 	- No longer try gnu++0x or c++0x which breaks with gcc-4.4, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=414979
